# vantara_os

./: .gitignore  LICENSE  Makefile  README.md  linux_commands.txt
vantara/: Cargo.toml  build.rs
vantara/src/: lib.rs
vantara/src/auth/: Cargo.toml  mod.rs
vantara/src/auth/modules/: auth_unix.rs  session_log.rs
vantara/src/auth/src/: auth.rs  lib.rs
vantara/src/auth/src/modules/: auth_unix.rs  group.rs  mod.rs  passwd.rs  session_log.rs  session_logger.rs  shadow.rs
vantara/src/commands/cat/: Cargo.toml
vantara/src/commands/chmod/: Cargo.toml
vantara/src/commands/chown/: Cargo.toml
vantara/src/commands/chown/src/: main.rs
vantara/src/commands/cp/: Cargo.toml
vantara/src/commands/cp/src/: main.rs
vantara/src/commands/date/: Cargo.toml
vantara/src/commands/date/src/: main.rs  rtc.rs
vantara/src/commands/edit/: Cargo.toml
vantara/src/commands/edit/src/: main.rs
vantara/src/commands/find/: Cargo.toml
vantara/src/commands/find/src/: main.rs
vantara/src/commands/free/: Cargo.toml
vantara/src/commands/free/src/: main.rs
vantara/src/commands/grep/: Cargo.toml
vantara/src/commands/grep/src/: main.rs
vantara/src/commands/gunzip/: Cargo.toml
vantara/src/commands/gzip/: Cargo.toml
vantara/src/commands/head/: Cargo.toml
vantara/src/commands/less/: Cargo.toml
vantara/src/commands/ln/: Cargo.toml
vantara/src/commands/login/: Cargo.toml
vantara/src/commands/ls/: Cargo.toml
vantara/src/commands/mkdir/: Cargo.toml
vantara/src/commands/mv/: Cargo.toml
vantara/src/commands/ps/: Cargo.toml
vantara/src/commands/pwd/: Cargo.toml
vantara/src/commands/rm/: Cargo.toml
vantara/src/commands/rmdir/: Cargo.toml
vantara/src/commands/rtar/: Cargo.toml
vantara/src/commands/shell/: Cargo.toml
vantara/src/commands/tail/: Cargo.toml
vantara/src/commands/touch/: Cargo.toml
vantara/src/commands/trash/: Cargo.toml
vantara/src/commands/uname/: Cargo.toml
vantara/src/commands/uptime/: Cargo.toml
vantara/src/commands/who/: Cargo.toml
vantara/src/common/: mod.rs
vantara/src/gui/: Cargo.toml
vantara/src/gui/src/: main.rs
vantara/src/init/: Cargo.toml
vantara/src/init/src/: main.rs  service.rs  setup.rs  syscall.rs
vantara/src/lib/: lib.rs
vantara/src/setup/: Cargo.toml  mod.rs
vantara/src/setup/modules/: timezone.rs
vantara/src/setup/src/: lib.rs  setup.rs
vantara/src/systemd/: Cargo.toml  mod.rs
vantara/src/systemd/src/: lib.rs  manager.rs  service.rs
vantara/target-specs/: x86_64-naked.json
(+76 files in other folders)
