[package]
name = "vantara"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/systemd/src/lib.rs"

[dependencies]
glob = "0.3"
nix = { version = "0.30", features = ["process", "signal"] }

[workspace]
members = [
    "src/init",
    "src/commands/*",
    "src/systemd",
]

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
