[package]
name = "vantara"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[dependencies]
glob = "0.3"
nix = { version = "0.30", features = ["process", "signal"] }
chrono = "0.4"
chrono-tz="0.10.4"
termios = "0.3.3"

[workspace]
members = [
    "src/init",
    "src/commands/*",
    "src/systemd",
]

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
