[package]
name = "vantara"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
glob = "0.3"
nix = { version = "0.30", features = ["process", "signal"] }
chrono = "0.4"
chrono-tz="0.10.4"
termios = "0.3.3"
libc = "0.2"
sha2 = "0.10.9"
rand = "0.9.2"
hex = "0.4.3"

[workspace]
members = [
    "src/commands/*",
    "src/init",
    "src/gui",
]

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
