[package]
name = "login"
version = "0.1.0"
edition = "2021"
authors = ["Hafifi"]
description = "Vantara System OS login module"
license = "MIT"

[dependencies]
hex = "0.4.3"
termios = "0.3.3"
rpassword = "7.3.1"
sha2 = "0.10"
rand = "0.9.1"
which = "8.0.0"
chrono = "0.4"
vantara = { path = "../../../" }
