[package]
name = "rtar"
version = "0.1.0"
edition = "2021"
authors = ["Hafifi"]
description = "Vantara System OS tar module"
license = "Apache-2.0 license"

[dependencies]
vantara = { path = "../../../" }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6.0"
xz2 = "0.1"
anyhow = "1.0"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
